404 not found in VPE / HTML preview for pages with space
fixed